test/end-to-end/compile-errors/fun-cant-have-body.crow
main void()
	()

== nat(a nat, b nat) builtin
	true

foo void() libc extern
	()
